@@ -16,10 +16,9 @@
  *******************************************************************************/
 package org.eclipse.leshan.core.node.codec;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertFalse;
-import static org.junit.Assert.assertNull;
+import static org.junit.Assert.*;
 
+import java.nio.charset.StandardCharsets;
 import java.util.Date;
 import java.util.List;
 
@@ -36,7 +35,6 @@ import org.eclipse.leshan.core.request.ContentFormat;
 import org.eclipse.leshan.tlv.Tlv;
 import org.eclipse.leshan.tlv.Tlv.TlvType;
 import org.eclipse.leshan.tlv.TlvEncoder;
-import org.eclipse.leshan.util.Charsets;
 import org.junit.BeforeClass;
 import org.junit.Test;
 
@@ -55,9 +53,9 @@ public class LwM2mNodeDecoderTest {
     }
 
     @Test
-    public void text_manufacturer_resource() throws InvalidValueException {
+    public void text_manufacturer_resource() throws CodecException {
         String value = "MyManufacturer";
-        LwM2mSingleResource resource = (LwM2mSingleResource) decoder.decode(value.getBytes(Charsets.UTF_8),
+        LwM2mSingleResource resource = (LwM2mSingleResource) decoder.decode(value.getBytes(StandardCharsets.UTF_8),
                 ContentFormat.TEXT, new LwM2mPath(3, 0, 0), model);
 
         assertEquals(0, resource.getId());
@@ -66,15 +64,15 @@ public class LwM2mNodeDecoderTest {
         assertEquals(value, resource.getValue());
     }
 
-    @Test(expected = IllegalArgumentException.class)
-    public void content_format_is_mandatory() throws InvalidValueException {
+    @Test(expected = CodecException.class)
+    public void content_format_is_mandatory() throws CodecException {
         String value = "MyManufacturer";
-        decoder.decode(value.getBytes(Charsets.UTF_8), null, new LwM2mPath(666, 0, 0), model);
+        decoder.decode(value.getBytes(StandardCharsets.UTF_8), null, new LwM2mPath(666, 0, 0), model);
     }
 
     @Test
-    public void text_battery_resource() throws InvalidValueException {
-        LwM2mSingleResource resource = (LwM2mSingleResource) decoder.decode("100".getBytes(Charsets.UTF_8),
+    public void text_battery_resource() throws CodecException {
+        LwM2mSingleResource resource = (LwM2mSingleResource) decoder.decode("100".getBytes(StandardCharsets.UTF_8),
                 ContentFormat.TEXT, new LwM2mPath(3, 0, 9), model);
 
         assertEquals(9, resource.getId());
@@ -84,7 +82,7 @@ public class LwM2mNodeDecoderTest {
     }
 
     @Test
-    public void tlv_manufacturer_resource() throws InvalidValueException {
+    public void tlv_manufacturer_resource() throws CodecException {
         String value = "MyManufacturer";
         byte[] content = TlvEncoder.encode(new Tlv[] { new Tlv(TlvType.RESOURCE_VALUE, null, value.getBytes(), 0) })
                 .array();
@@ -138,7 +136,7 @@ public class LwM2mNodeDecoderTest {
     }
 
     @Test
-    public void tlv_device_object_instance0_from_resources_tlv() throws InvalidValueException {
+    public void tlv_device_object_instance0_from_resources_tlv() throws CodecException {
 
         LwM2mObjectInstance oInstance = (LwM2mObjectInstance) decoder.decode(ENCODED_DEVICE, ContentFormat.TLV,
                 new LwM2mPath(3, 0), model);
@@ -146,15 +144,15 @@ public class LwM2mNodeDecoderTest {
     }
 
     @Test
-    public void tlv_device_object_instance0_from_resources_tlv__instance_expected() throws InvalidValueException {
+    public void tlv_device_object_instance0_from_resources_tlv__instance_expected() throws CodecException {
 
-        LwM2mObjectInstance oInstance = (LwM2mObjectInstance) decoder.decode(ENCODED_DEVICE, ContentFormat.TLV,
+        LwM2mObjectInstance oInstance = decoder.decode(ENCODED_DEVICE, ContentFormat.TLV,
                 new LwM2mPath(3), model, LwM2mObjectInstance.class);
         assertDeviceInstance(oInstance);
     }
 
     @Test
-    public void tlv_device_object_instance0_from_instance_tlv() throws InvalidValueException {
+    public void tlv_device_object_instance0_from_instance_tlv() throws CodecException {
 
         // TLV instance = { type=INSTANCE, instanceId=0, length=DEVICE_ENCODED.lentgh, value=DEVICE_ENCODED }
         byte[] instanceTlv = new byte[ENCODED_DEVICE.length + 3];
@@ -167,7 +165,7 @@ public class LwM2mNodeDecoderTest {
     }
 
     @Test
-    public void tlv_power_source__array_values() throws InvalidValueException {
+    public void tlv_power_source__array_values() throws CodecException {
         byte[] content = new byte[] { 65, 0, 1, 65, 1, 5 };
 
         LwM2mResource resource = (LwM2mResource) decoder.decode(content, ContentFormat.TLV, new LwM2mPath(3, 0, 6),
@@ -180,7 +178,7 @@ public class LwM2mNodeDecoderTest {
     }
 
     @Test
-    public void tlv_power_source__multiple_resource() throws InvalidValueException {
+    public void tlv_power_source__multiple_resource() throws CodecException {
         // this content (a single TLV of type 'multiple_resource' containing the values)
         // is probably not compliant with the spec but it should be supported by the server
         byte[] content = new byte[] { -122, 6, 65, 0, 1, 65, 1, 5 };
@@ -194,8 +192,8 @@ public class LwM2mNodeDecoderTest {
         assertEquals(5L, resource.getValue(1));
     }
 
-    @Test(expected = InvalidValueException.class)
-    public void tlv_multi_instance_object__missing_instance_tlv() throws InvalidValueException {
+    @Test(expected = CodecException.class)
+    public void tlv_multi_instance_object__missing_instance_tlv() throws CodecException {
 
         byte[] content = TlvEncoder.encode(new Tlv[] { new Tlv(TlvType.RESOURCE_VALUE, null, "value1".getBytes(), 1),
                                 new Tlv(TlvType.RESOURCE_VALUE, null, "value1".getBytes(), 2) })
@@ -205,7 +203,7 @@ public class LwM2mNodeDecoderTest {
     }
 
     @Test
-    public void tlv_unknown_object__missing_instance_tlv() throws InvalidValueException {
+    public void tlv_unknown_object__missing_instance_tlv() throws CodecException {
 
         byte[] content = TlvEncoder.encode(new Tlv[] { new Tlv(TlvType.RESOURCE_VALUE, null, "value1".getBytes(), 1),
                                 new Tlv(TlvType.RESOURCE_VALUE, null, "value1".getBytes(), 2) })
@@ -218,7 +216,7 @@ public class LwM2mNodeDecoderTest {
     }
 
     @Test
-    public void json_device_object_instance0() throws InvalidValueException {
+    public void json_device_object_instance0() throws CodecException {
         // json content for instance 0 of device object
         StringBuilder b = new StringBuilder();
         b.append("{\"e\":[");
@@ -246,7 +244,7 @@ public class LwM2mNodeDecoderTest {
     }
 
     @Test
-    public void json_device_object_instance0_with_root_basename() throws InvalidValueException {
+    public void json_device_object_instance0_with_root_basename() throws CodecException {
         // json content for instance 0 of device object
         StringBuilder b = new StringBuilder();
         b.append("{\"bn\":\"/\",");
@@ -275,7 +273,7 @@ public class LwM2mNodeDecoderTest {
     }
 
     @Test
-    public void json_custom_object_instance() throws InvalidValueException {
+    public void json_custom_object_instance() throws CodecException {
         // json content for instance 0 of device object
         StringBuilder b = new StringBuilder();
         b.append("{\"e\":[");
@@ -293,7 +291,7 @@ public class LwM2mNodeDecoderTest {
     }
 
     @Test
-    public void json_timestamped_resources() throws InvalidValueException {
+    public void json_timestamped_resources() throws CodecException {
         // json content for instance 0 of device object
         StringBuilder b = new StringBuilder();
         b.append("{\"e\":[");
@@ -306,16 +304,16 @@ public class LwM2mNodeDecoderTest {
                 ContentFormat.JSON, new LwM2mPath(1024, 0, 1), model);
 
         assertEquals(3, timestampedResources.size());
-        assertEquals(new Long(25462634L - 5), timestampedResources.get(0).getTimestamp());
+        assertEquals(Long.valueOf(25462634L - 5), timestampedResources.get(0).getTimestamp());
         assertEquals(22.4d, ((LwM2mResource) timestampedResources.get(0).getNode()).getValue());
-        assertEquals(new Long(25462634L - 30), timestampedResources.get(1).getTimestamp());
+        assertEquals(Long.valueOf(25462634L - 30), timestampedResources.get(1).getTimestamp());
         assertEquals(22.9d, ((LwM2mResource) timestampedResources.get(1).getNode()).getValue());
-        assertEquals(new Long(25462634 - 50), timestampedResources.get(2).getTimestamp());
+        assertEquals(Long.valueOf(25462634 - 50), timestampedResources.get(2).getTimestamp());
         assertEquals(24.1d, ((LwM2mResource) timestampedResources.get(2).getNode()).getValue());
     }
 
     @Test
-    public void json_timestamped_instances() throws InvalidValueException {
+    public void json_timestamped_instances() throws CodecException {
         // json content for instance 0 of device object
         StringBuilder b = new StringBuilder();
         b.append("{\"e\":[");
@@ -329,20 +327,20 @@ public class LwM2mNodeDecoderTest {
                 ContentFormat.JSON, new LwM2mPath(1024, 0), model);
 
         assertEquals(3, timestampedResources.size());
-        assertEquals(new Long(25462634L - 5), timestampedResources.get(0).getTimestamp());
+        assertEquals(Long.valueOf(25462634L - 5), timestampedResources.get(0).getTimestamp());
         assertEquals("a string",
                 ((LwM2mObjectInstance) timestampedResources.get(0).getNode()).getResource(0).getValue());
         assertEquals(22.4d, ((LwM2mObjectInstance) timestampedResources.get(0).getNode()).getResource(1).getValue());
 
-        assertEquals(new Long(25462634L - 30), timestampedResources.get(1).getTimestamp());
+        assertEquals(Long.valueOf(25462634L - 30), timestampedResources.get(1).getTimestamp());
         assertEquals(22.9d, ((LwM2mObjectInstance) timestampedResources.get(1).getNode()).getResource(1).getValue());
 
-        assertEquals(new Long(25462634 - 50), timestampedResources.get(2).getTimestamp());
+        assertEquals(Long.valueOf(25462634 - 50), timestampedResources.get(2).getTimestamp());
         assertEquals(24.1d, ((LwM2mObjectInstance) timestampedResources.get(2).getNode()).getResource(1).getValue());
     }
 
     @Test
-    public void json_timestamped_Object() throws InvalidValueException {
+    public void json_timestamped_Object() throws CodecException {
         // json content for instance 0 of device object
         StringBuilder b = new StringBuilder();
         b.append("{\"e\":[");
@@ -357,17 +355,17 @@ public class LwM2mNodeDecoderTest {
                 ContentFormat.JSON, new LwM2mPath(1024), model);
 
         assertEquals(3, timestampedResources.size());
-        assertEquals(new Long(25462634L - 5), timestampedResources.get(0).getTimestamp());
+        assertEquals(Long.valueOf(25462634L - 5), timestampedResources.get(0).getTimestamp());
         assertEquals(22.4d,
                 ((LwM2mObject) timestampedResources.get(0).getNode()).getInstance(0).getResource(1).getValue());
         assertEquals("a string",
                 ((LwM2mObject) timestampedResources.get(0).getNode()).getInstance(0).getResource(0).getValue());
         assertEquals(23.0d,
                 ((LwM2mObject) timestampedResources.get(0).getNode()).getInstance(1).getResource(1).getValue());
-        assertEquals(new Long(25462634L - 30), timestampedResources.get(1).getTimestamp());
+        assertEquals(Long.valueOf(25462634L - 30), timestampedResources.get(1).getTimestamp());
         assertEquals(22.9d,
                 ((LwM2mObject) timestampedResources.get(1).getNode()).getInstance(0).getResource(1).getValue());
-        assertEquals(new Long(25462634 - 50), timestampedResources.get(2).getTimestamp());
+        assertEquals(Long.valueOf(25462634 - 50), timestampedResources.get(2).getTimestamp());
         assertEquals(24.1d,
                 ((LwM2mObject) timestampedResources.get(2).getNode()).getInstance(0).getResource(1).getValue());
     }
